--- a/test/views/recipe.html
+++ b/test/views/recipe.html
@@ -1,6 +1,6 @@
 
 <div class="recipePageDisplay">
-<!--Recipe name and image-->
+
 <div class="container">
     <div class="row">
         <div class="col-12 col-lg-6 order-2 order-lg-1">
@@ -12,30 +12,20 @@
         </div>
         </div>
     </div>
-    <!--Serving size and calorie count-->
     <div class="row">
     <div class="col-12 nutritionBox text-center">
             <span>Serving size: {{recipe.yield}}    |    </span>
             <span>Calories: {{recipe.calories | number : 0}}</span>
     </div>
     </div>
-    <!--Full ingredient list-->
     <div class="row recipePageContent">
         <div class="col-12 col-lg-8">
                 <h4>Ingredients:</h4>
                 <ul class="list-group list-group-flush">
-                <li class="list-group-item" ng-repeat="ingredient in recipe.ingredientLines">{{ingredient}}</li>
+                    <li class="list-group-item" ng-repeat="ingredient in recipe.ingredients">{{ingredient.text}}</li>
                 </ul>
         </div>
     </div>
-    <!--Prep instruction link-->
-    <div id="recipe-preparation" class="cf">
-            <h4>Preparation</h4>
-            <a class="btn mt20 align-c" target="_blank" href = "{{recipe.url}}">
-                <span class="btn btn-secondary float-left">Instructions</span>
-            </a>
-    </div>
 </div>
-<!--return to home search page button-->
 <a class="btn recipeSearchBtn" role="button" href="#/!" title="Back">Back</a>
 </div>
